[package]
name = "prover"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v0.4" }
bus-mapping = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "v0.3" }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "v0.3", features = ["warn-unimplemented"] }
zkevm-circuits = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "v0.3", features = ["test-circuits"] }
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", branch = "halo2-ecc-snark-verifier-0323", default-features=false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }
halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", branch = "halo2-ecc-snark-verifier-0323", default-features=false, features=["halo2-pse","display"] }
halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib", branch = "halo2-ecc-snark-verifier-0323", default-features=false, features=["halo2-pse","display"] }
maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-ecc-snark-verifier-0323" }
env_logger = "0.9.0"
ethers-providers = "0.17.0"
hyper = { version = "0.14.16", features = ["server"] }
rand_xorshift = "0.3"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.24"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
zkevm_common = { path = "../common" }
itertools = "0.10.3"
clap = { version = "4.0.14", features = ["derive", "env"] }

# autogen
mock = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "develop", optional = true }
ethers-signers = { version = "0.17.0", optional = true }
zkevm_dev = { path = "../dev", optional = true }
paste = { version = "1.0.11", optional = true }

[features]
default = []
autogen = ["mock", "ethers-signers", "zkevm_dev", "paste"]
